--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -1,3 +1,9 @@
+button:focus {
+    outline:0;
+}
+
+
+
 :root {
     --primary-color: #ffffff;
     --secondary-color: #536390;
@@ -32,13 +38,12 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
     background-color: var(--primary-color);
     color: var(--font-color);
+}
+
+.holly-grail{
+    display: none;
 }
 
 .navBar {
@@ -52,6 +57,7 @@ body {
     align-items: center;
     z-index: 100;
     border-bottom: 1px solid #19102c;
+    
 }
 
 .navBar img {
@@ -192,16 +198,24 @@ body {
     font-family: "Roboto";
 }
 
+
+/* tableau survey crypto */
+
+
+
+
 .tableauSurvey {
     margin-top: -210px;
-    width: 50%;
-    height: 465px;
+    width: 30%;
+    height: 300px;
     position: relative;
-    right: 20px;
+    border-radius: 200px;
 }
 
+
+
 .filters {
-    padding-left: 20%;
+    
     z-index: 999;
     padding-right: 20%;
     height: 80px;
@@ -212,7 +226,7 @@ body {
     color: rgba(255, 255, 255, 0.493);
     font-family: "Roboto";
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 .filters select {
@@ -235,6 +249,7 @@ footer {
     bottom: 0px;
     background-color: var(--heading-color);
     border-top: 1px solid rgba(129, 129, 129, 0.089);
+    
 }
 
 @keyframes opacity {
@@ -285,32 +300,8 @@ card img {
     transform: translateY(10px);
 }
 
-.btc {
-    border: 1px solid rgba(88, 88, 88, 0.548);
-}
 
-.cosmos {
-    margin-top: 50px;
-    border: 1px solid rgba(88, 88, 88, 0.548);
-}
-.ethereum {
-    margin-top: 50px;
-    border: 1px solid rgba(88, 88, 88, 0.548);
-}
-.ltc {
-    margin-top: 50px;
-    border: 1px solid rgba(88, 88, 88, 0.548);
-}
-.xrp {
-    margin-top: 50px;
-    border: 1px solid rgba(88, 88, 88, 0.548);
-}
-.bnb {
-    margin-top: 50px;
-    border: 1px solid rgba(88, 88, 88, 0.548);
-}
 .myChart {
-    margin-top: 50px;
     border: 1px solid rgba(88, 88, 88, 0.548);
 }
 
@@ -528,9 +519,10 @@ card img {
         width: 100%;
         height: 100vh;
         display: flex;
+        justify-content: center;
         align-items: center;
-        justify-content: space-around;
-        flex-direction: row;
+
+      
     }
 
     cards {
@@ -601,61 +593,128 @@ card img {
         width: 100%;
     }
     .myChart {
-        width: 200%;
+        width: 100%;
         border: 0px;
     }
+
+  
+    #myChart{
+        width: 250px !important;
+        margin-left: 15px !important;
+        margin-bottom: 70px;
+    }
+
+
 
     #tableauBorder {
         border: 0px;
     }
     #tableauSurvey {
         border: 1px solid var(--secondary-color);
-        width: 900px;
-        top: 30px;
+        width: 300px;
+        top: 300px;
+        left: 75%;
        
     }
     #tableauSurvey:hover {
         background-color: var(--font-color);
     }
 
-    .btc,
-    .cosmos,
-    .ethereum,
-    .ltc,
-    .xrp,
-    .bnb {
-        display: grid;
-        max-width: 300%;
-        min-width: 100px;
-        grid-template-columns: 1fr;
-        grid-template-rows: minmax(50px, 60px) 1fr;
-        grid-template:
-            "info"
-            "chart";
-        border-radius: 30px;
-        margin-top: 30px;
-        margin-bottom: 70px;
-        border-radius: 0px;
-        border: 1px solid black;
-    }
+    
 
     .myChart {
         display: grid;
         max-width: 300%;
-        min-width: 500px;
+        min-width: 300px;
         grid-template-columns: 1fr;
         grid-template-rows: minmax(50px, 60px) 1fr;
         grid-template:
             "info"
             "chart";
         border-radius: 30px;
-        margin-top: 30px;
+        margin-top: -150px;
         margin-bottom: 70px;
         border-radius: 0px;
     }
+
+
+
+
+
+
+
+
+    .main{
+        width: 100vw;
+        height: 100vh;
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+.holly-grail {
+    
+   
+    display: grid;
+  
+    grid-template-areas:
+      "header header header"
+      "nav content side"
+      "footer footer footer";
+  
+    grid-template-columns: 200px 1fr 200px;
+    grid-template-rows: auto 1fr auto;
+    grid-gap: 10px;
+    
+    height: 80vh;
+    width: 100vw;
+  }
+
+
+ /* Holly grail layout main div */
+
+  header {
+    grid-area: header;
+    height: 200px;
+  }
+  
+  nav {
+    grid-area: nav;
+    
+  }
+  
+  main {
+    grid-area: content;
+  }
+  
+  aside {
+    grid-area: side;
+    margin-right: 0.5rem;
+  }
+  
+  footer {
+    grid-area: footer;
+  }
+
+
+
+
 }
 
-/* Tableau avec crypto en survey */
+
+
+
+
+
+
+
+
+
+
+
+/* Theme switch */
 
 .theme-switch-wrapper {
     position: fixed;
@@ -723,7 +782,7 @@ input:checked + .slider:before {
 
 .slider.round:before {
     border-radius: 50%;
-    background-image: url("./Ressources/307307.svg");
+    background-image: url("../../Ressources/307307.svg");
 }
 
 .slider #sun {
@@ -733,3 +792,134 @@ input:checked + .slider:before {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.article{
+    display: flex;
+    flex-direction: column;
+    text-align:justify;
+    align-items:center;
+    justify-content: center;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    border-bottom: 1px solid black;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.article h2{
+    margin-bottom: 50px;
+    font-size: 30px;
+    text-align:center;
+}
+
+
+
+.article img{
+    width: 90%;
+    margin-bottom: 50px;
+}
+
+.main{
+    
+
+    width: 100vw;
+    align-items:center;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+.commentaires{
+    width: 90%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    background-color: rgba(218, 109, 109, 0.651);
+    padding-top: 10px;
+    border: 1px solid black;
+    margin-bottom: 100px;
+    padding-bottom: 100px;
+    border-radius: 30px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.664);
+    margin-left: 5%;
+}
+
+input{
+    width: 500px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
+
+#name{
+    height: 30px
+}
+
+#email{
+    height: 30px;
+}
+
+#comment{
+    
+   height: 300px;
+}
+
+
+#comment-button{
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    background-color: grey;
+    border-radius: 50px;
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.384);
+    margin-top: 50px;
+}
+
+
+#comment-button:active{
+    outline: none;
+    
+    transform: translateY(2px) translateX(2px);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.329);
+}
+
+#display-comment-button{
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    background-color: grey;
+    border-radius: 50px;
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.384);
+    margin-top: 50px;
+}
