--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,3 @@
-@import url('variables.css');
-
 body{
     margin: 0;
     padding:0;
@@ -7,28 +5,32 @@ body{
 }
 
 #body-container{
+    color: var(--primary-color);
     width: 100vw;
+    height: 100%;
     max-width: 1200px;
     margin: auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: var(--height-header);
+    z-index: 101;
+    position: relative;
 }
 
 #contact-form-card{
-    height: 75vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
+    position: relative;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    height: 90%;
     margin: 0;
     justify-content: center;
     align-items: center;
@@ -43,6 +45,8 @@ form{
 
 input{
     width: 300px;
+    height: 30px;
+    font-size: 16px;
     border: var(--thumbnail-border);
     border-radius: 5px;
     transition: transform 0.5s;
@@ -50,6 +54,7 @@ input{
 
 textarea{
     border-radius: 5px;
+    font-size: 16px;
     border: var(--thumbnail-border);
     resize: none;
 }
@@ -86,7 +91,7 @@ h2 {
     font-weight: 600;
 }
 
-label{
+.label{
     display: flex;
     justify-content: space-between;
     font-size: 1.3rem;
@@ -109,7 +114,7 @@ label{
 
 .button{
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     width: 150px;
     height: 40px;
     justify-content: center;
@@ -128,6 +133,16 @@ label{
     box-shadow: 0px 0px 0px black;
 }
 
+.popup-container{
+    z-index: 101;
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+}
+
 .warning{
 	background-color: rgba(244, 110, 91, 0.3);
 	color: red;
@@ -135,49 +150,74 @@ label{
     font-size: 0.75rem;
 }
 
+.hidden-container{
+    z-index: -10;
+  }
+
 .hidden{
     transform: translateX(110vw);
-  }
+    display: none;
+}
   
 .modal {
     font-size: 1.25em;
-    position: relative;
+    position: absolute;
+    bottom: 5px;
+    right: 0;
     z-index: 999;
     display: flex;
-    align-items: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     width: 100%;
-    height: 10%;
     border-radius: 5px;
-    background-color: #26e740;
+    background-color: #66BB6A;
     transition-duration: 0.5s;
 }
 
+@media (orientation: landscape) {
 
+
+    #contact-form-card{
+        height: auto;
+    }
+
+    form{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap; 
+        justify-content: center;
+        align-items: center;
+    }
+
+    #msg{
+        height: 100px;
+    }
+
+    .popup-container{
+        height: 100%;
+    }
+
+    footer{
+        position: relative;
+    }
+
+    .modal {
+        height: 50vh;
+        width: 25vw;
+        padding: 10px;
+    }
+
+
+
+}
 
 @media screen and (min-width: 992px){
 
     #contact-form-card{
-        width: 35%;
-        padding-bottom: 5px;
-    }
-
-    .hidden{
-        transform: translate(0, 12vh);
-    }
-
-    .modal {
-        font-size: 1.25em;
-        position: relative;
-        z-index: 999;
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
         width: 100%;
-        height: 10%;
-        border-radius: 5px;
-        background-color: #26e740;
-        transition-duration: 1s;
+        padding-bottom: 5px;
     }
 
 }
